[gd_scene load_steps=9 format=2]

[ext_resource path="res://GFX/Items/spring_in.png" type="Texture" id=1]
[ext_resource path="res://GFX/Items/spring_out.png" type="Texture" id=2]
[ext_resource path="res://GFX/Items/spring.png" type="Texture" id=3]
[ext_resource path="res://Scenes/JumpPad.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "boost",
"speed": 2.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "in",
"speed": 1.5
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "out",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 71.5, 54.5 )

[sub_resource type="Animation" id=3]
resource_name = "boost"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "boost", "boost", "out" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00582009, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -15 ), Vector2( 0, -15 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "in", "in", "out", "out" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, -10 ) ]
}

[node name="JumpPad" type="Area2D"]
position = Vector2( -1, 1 )
collision_layer = 8
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 1 )
frames = SubResource( 1 )
animation = "boost"
playing = true
offset = Vector2( 0, -15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, -14.5 )
shape = SubResource( 2 )

[node name="JumpPadAnim" type="AnimationPlayer" parent="."]
autoplay = "default"
method_call_mode = 1
anims/boost = SubResource( 3 )
anims/default = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_JumpPad_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_JumpPad_body_exited"]
[connection signal="animation_finished" from="JumpPadAnim" to="." method="_on_JumpPadAnim_animation_finished"]
